# ChangeLog for www-apache/mod_jk
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_jk/ChangeLog,v 1.8 2006/07/23 09:31:44 nelchael Exp $

*mod_jk-1.2.15 (23 Jul 2006)

  23 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> files/88_mod_jk.conf,
  +mod_jk-1.2.15.ebuild:
  Version bump, fixes bug #112225 and bug #110170.

  26 May 2006; <nixnut@gentoo.org> mod_jk-1.2.13.ebuild:
  Added ~ppc. bug #134330

  08 Jan 2006; Carsten Lohrke <carlo@gentoo.org> metadata.xml:
  Maintainer retired.

  17 Oct 2005; Petteri Räty <betelgeuse@gentoo.org> mod_jk-1.2.10.ebuild,
  mod_jk-1.2.13.ebuild:
  Removed dependency on virtual/jdk, fixes bug #109121.

  11 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org> mod_jk-1.2.10.ebuild,
  mod_jk-1.2.13.ebuild:
  minor fixes

*mod_jk-1.2.13 (01 Jun 2005)

  01 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org> mod_jk-1.2.10.ebuild,
  +mod_jk-1.2.13.ebuild:
  updated HOMEPAGE, new upstream version.

  29 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org>
  files/jk-workers.properties, mod_jk-1.2.10.ebuild:
  tomcat dependency isnt required, give the choice to the user. fixes #89939.
  also modified the default workers file. thanks to Andy Wang
  <dopey@moonteeth.com> for the suggestion.

*mod_jk-1.2.10 (14 Apr 2005)

  14 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> +metadata.xml,
  +files/88_mod_jk.conf, +files/jk-workers.properties, +mod_jk-1.2.10.ebuild:
  Inital import. Ebuild is based on the apache-module.eclass, fixes #19094.
  Special thanks to trapni and beu for offering that much help.
