@@ -1,1 +1,3 @@
 MD5 028e39a84b81847b62d07ed9cd9427ae jakarta-tomcat-connectors-1.2.13-src.tar.gz 724067
+RMD160 aa1bc48bb9443d7d4ba019d3aeab4a188a98bd48 jakarta-tomcat-connectors-1.2.13-src.tar.gz 724067
+SHA256 4547d2b2f220342a8e373e009a23326073ed0fcfcae7a54466b04d1bc8b9aee9 jakarta-tomcat-connectors-1.2.13-src.tar.gz 724067
