@@ -1,0 +1,3 @@
+MD5 58e1b9406e0cfe11bd4bc297ba146b4f tomcat-connectors-1.2.18-src.tar.gz 929823
+RMD160 3f9c60d6121271ade71dd0edd5dd88910e13e105 tomcat-connectors-1.2.18-src.tar.gz 929823
+SHA256 149de5bf40d4f7d29efaf3e61d401a74db93c1cf27e0053dd29a316db98ad311 tomcat-connectors-1.2.18-src.tar.gz 929823
