@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+
 	<herd>java</herd>
+
+	<maintainer>
+		<email>wltjr@gentoo.org</email>
+		<name>William L. Thomson Jr.</name>
+	</maintainer>
+
+	<longdescription>
+		mod_jk is a connector used to connect Tomcat JSP/Servlet 
+		container with web servers such as Apache, Netscape, 
+		Iplanet, SunOne and even IIS using the AJP protocol.
+	</longdescription>
+
 </pkgmetadata>
